--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -22,6 +22,6 @@
   </div>
 
   <div class="actions">
-    <%= f.submit %>
-  </div>
+    <%= f.submit @post.id ? "Update Post" : "Submit Post" %>
+</div>
 <% end %>
